--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "image-exists": "^1.1.0",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
