--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "rent-a-car",
+  "homepage": "https://nikolagg99.github.io/json-server-rent-a-car",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "gh-pages": "^3.2.0",
     "image-exists": "^1.1.0",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
@@ -23,6 +25,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start:json-server": "json-server --watch ./db/db.json",
     "build": "react-scripts build",
     "test": "react-scripts test",
