--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rent-a-car",
-  "homepage": "https://nikolagg99.github.io/json-server-rent-a-car",
+  "homepage": "https://nikolagg99.github.io/login",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
